# openfst

./: .gitignore  CMakeLists.txt
src/extensions/far/: CMakeLists.txt
src/extensions/linear/: CMakeLists.txt
src/extensions/mpdt/: CMakeLists.txt
src/extensions/pdt/: CMakeLists.txt
src/lib/: CMakeLists.txt
